--- a/index.html
+++ b/index.html
@@ -1,187 +1,178 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
 
-  <body>
-    <header id="a0" class="header">
-      <nav class="header__menu">
-        <ul class="header__links-list-item">
-          <li class="no_marker">
-            <a>главная</a>
-          </li>
-          <li>
-            <a href="#0" class="header__links-list-item">посмотреть лоты</a>
-          </li>
-          <li>
-            <a href="#0" class="header__links-list-item">об аукционе</a>
-          </li>
-        </ul>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./fonts/fonts.css" />
+  <link rel="stylesheet" href="./styles/global.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+</head>
 
-      <a>
-        <img
-          class="header__logo"
-          src="images/logo-black.svg"
-          alt="логотип сайта"
-        />
-      </a>
+<body>
+  <header id="a0" class="header">
+    <nav class="header__menu">
+      <ul class="header__links-list-item">
+        <li class="no_marker">
+          <a>главная</a>
+        </li>
+        <li>
+          <a href="#0" class="header__links-list-item">посмотреть лоты</a>
+        </li>
+        <li>
+          <a href="#0" class="header__links-list-item">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
 
-      <address class="adress">
-        <div class="content">
-          <a href="tel:+9-999-555-5555">+9 999 555 5555</a>
-          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <br />наб. Принсенграхт 263-
-          <p>265, Амстердам</p>
+    <a>
+      <img class="header__logo" src="images/logo-black.svg" alt="логотип сайта" />
+    </a>
+
+    <address class="adress">
+      <div class="content">
+        <a href="tel:+9-999-555-5555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <br />наб. Принсенграхт 263-
+        <p>265, Амстердам</p>
+      </div>
+    </address>
+  </header>
+  <main>
+    <section class="cover">
+      <div class="overlay"></div>
+      <div class="cover_box">
+        <h1 class="cover__title">
+          <span class="aligned-text">ОНО</span>
+          <span class="aligned-text_center">ТЕБЕ</span>
+          <span class="aligned-text_right">НАДО</span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            АУКЦИОН ВЕЩЕЙ, В КОТОРЫЕ НИКТО НЕ ВЕРИЛ
+          </p>
+          <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
         </div>
-      </address>
-    </header>
-    <main>
-      <section class="cover">
-        <div class="overlay"></div>
-        <div class="cover_box">
-          <h1 class="cover__title">
-            <span class="aligned-text">ОНО</span>
-            <span class="aligned-text_center">ТЕБЕ</span>
-            <span class="aligned-text_right">НАДО</span>
-          </h1>
-          <div class="cover__description">
-            <p class="cover__description-text">
-              АУКЦИОН ВЕЩЕЙ, В КОТОРЫЕ НИКТО НЕ ВЕРИЛ
+      </div>
+    </section>
+    <section class="lots">
+      <h2 id="a1" class="lots__heading">ЛОТЫ</h2>
+      <ul class="lots__card-list">
+        <li class="lots__card-list-item">
+          <a href="#0" class="card-link">
+            <article class="card">
+              <div class="card_type_film card_type_common">
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <div class="overlay"></div>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </div>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item">
+          <a href="#" class="card-link">
+            <article class="card">
+              <div class="card_type_book card_type_common">
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного
+                  агента
+                </h3>
+                <div class="overlay"></div>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                  и с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </div>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item">
+          <a href="#" class="card-link">
+            <article class="card">
+              <div class="card_type_picture card_type_common">
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <div class="overlay"></div>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не
+                  знали, что это — одна из революционных работ Кандинского?
+                </p>
+              </div>
+            </article>
+          </a>
+        </li>
+      </ul>
+      <a href="#" class="lots__look-more-link">посмотреть больше</a>
+    </section>
+    <section class="about">
+      <div class="about__column">
+        <div class="about__logo">
+          <div class="circle">
+            <div class="about__logo-image"></div>
+          </div>
+        </div>
+        <div class="text">
+          <h2 id="a2" class="about__title">Об аукционе</h2>
+          <div class="content_paragraphs">
+            <p class="about__text location_left">
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть
+              ни на один аукцион. Потому что кому нужен дневник
+              девочки-подростка или картина, которую может нарисовать даже
+              ребёнок? Кому нужны все эти странные вещи, созданные любителями?
             </p>
-            <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
+            <p class="about__text">
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас
+              эти лоты стали культовыми.
+            </p>
           </div>
         </div>
-      </section>
-      <section class="lots">
-        <h2 id="a1" class="lots__heading">ЛОТЫ</h2>
-        <ul class="lots__card-list">
-          <li class="lots__card-list-item">
-            <a href="#0" class="card-link">
-              <article class="card">
-                <div class="card_type_film card_type_common">
-                  <h3 class="card__title">
-                    Фильм режиссёра, который бросил киношколу
-                  </h3>
-                  <div class="overlay"></div>
-                  <p class="card__text">
-                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                    ставка, если бы вы не знали, что режиссёр — Пол Томас
-                    Андерсон?
-                  </p>
-                </div>
-              </article>
-            </a>
-          </li>
-          <li class="lots__card-list-item">
-            <a href="#" class="card-link">
-              <article class="card">
-                <div class="card_type_book card_type_common">
-                  <h3 class="card__title">
-                    Книга, где описан один скучный день из жизни рекламного
-                    агента
-                  </h3>
-                  <div class="overlay"></div>
-                  <p class="card__text">
-                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
-                    и с переходами на древнеанглийский. В ней одновременно
-                    рассказывается о 16 июня 1904 года и об истории литературы,
-                    начиная с античных времён. И это всё накладывается на
-                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-                    Джеймса Джойса?
-                  </p>
-                </div>
-              </article>
-            </a>
-          </li>
-          <li class="lots__card-list-item">
-            <a href="#" class="card-link">
-              <article class="card">
-                <div class="card_type_picture card_type_common">
-                  <h3 class="card__title">
-                    Картина, которую повторит даже 5-летний сын маминой подруги
-                  </h3>
-                  <div class="overlay"></div>
-                  <p class="card__text">
-                    Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                    котиков... Сколько бы вы на такое поставили, если бы не
-                    знали, что это — одна из революционных работ Кандинского?
-                  </p>
-                </div>
-              </article>
-            </a>
-          </li>
-        </ul>
-        <a href="#" class="lots__look-more-link">посмотреть больше</a>
-      </section>
-      <section class="about">
-        <div class="about__column">
-          <div class="about__logo">
-            <div class="circle">
-              <div class="about__logo-image"></div>
-            </div>
-          </div>
-          <div class="text">
-            <h2 id="a2" class="about__title">Об аукционе</h2>
-            <div class="content_paragraphs">
-              <p class="about__text location_left">
-                Здесь вы не встретите очередное пафосное собрание невероятно
-                дорогого антиквариата. Наши лоты вообще не должны были попасть
-                ни на один аукцион. Потому что кому нужен дневник
-                девочки-подростка или картина, которую может нарисовать даже
-                ребёнок? Кому нужны все эти странные вещи, созданные любителями?
-              </p>
-              <p class="about__text">
-                Слишком сложные или, наоборот, слишком простые. Опережающие своё
-                время. В пух и прах растерзанные критиками. Непринятые и
-                непонятые. Когда-то они казались просто неудачными. Но, несмотря
-                на критику, кажущуюся простоту или сложность, сейчас без этих
-                лотов невозможно представить современную культуру. Когда в эти
-                вещи не верил никто, продолжали верить их создатели. И сейчас
-                эти лоты стали культовыми.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <address class="address">
-        <ul class="content_footer">
-          <li><a href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
-          <li><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
-          <li>наб. Принсенграхт 263-265, Амстердам</li>
-        </ul>
-      </address>
-      <nav class="footer__menu">
-        <div class="footer__menu-list">
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <address class="address">
+      <ul class="content_footer">
+        <li><a href="tel:+9-999-555-5555">+9 999 555 5555</a></li>
+        <li><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
+        <li>наб. Принсенграхт 263-265, Амстердам</li>
+      </ul>
+    </address>
+    <nav class="footer__menu">
+      <div class="footer__menu-list">
           <a class="link" href="#a0">главная</a>
           <a href="#a1">посмотреть лоты</a>
           <a href="#a2">об аукционе</a>
-        </div>
-      </nav>
-      <div class="footer__social-list">
-        <a
-          href="#"
-          class="footer__social-list-item footer__social-icon footer__social-icon_1"
-        ></a>
-        <a
-          href="#"
-          class="footer__social-list-item footer__social-icon footer__social-icon_2"
-        ></a>
-        <a
-          href="#"
-          class="footer__social-list-item footer__social-icon footer__social-icon_3"
-        ></a>
+        </ul>
       </div>
-    </footer>
-  </body>
+    </nav>
+    <div class="footer__social-list">
+    <ul class="list">
+    <li><a href="#" class="footer__social-list-item footer__social-icon footer__social-icon_1"></a></li>
+    <li><a href="#" class="footer__social-list-item footer__social-icon footer__social-icon_2"></a></li>
+    <li><a href="#" class="footer__social-list-item footer__social-icon footer__social-icon_3"></a></li>
+    </ul>
+    </div>
+  </footer>
+</body>
 </html>
